# test-autotools

./: .gitignore  AUTHORS.txt  Makefile  Makefile.am  configure.ac  configure.in
lib/: config.h  config.in.h  local.mk
src/: local.mk
